Исправление запечаний по ревью